@@ -1,2 +1,9 @@
+buffer = translate(space(1033), " ", ".")
+sprint out; using "[ & ] "; buffer
+? out
 
-SPRINT "hello"
+sprint out; using "[ !!! ] "; buffer
+? out
+
+sprint out; using "(\\              \\)"; "hello down there ..."
+? out
